rusty-book-shelf/adapter/src/repository/diagnostic message [0]
error[E0053]: method `verify_user` has an incompatible type for trait
  --> adapter/src/repository/auth.rs:26:1
   |
26 | #[async_trait]
   | ^^^^^^^^^^^^^^ expected `Option<UserId>`, found `UserId`
   |
   = note: expected signature `fn(&'life0 AuthRepositoryImpl, &'life1 _, &'life2 _) -> Pin<Box<(dyn std::future::Future<Output = Result<Option<UserId>, AppError>> + Send + 'async_trait)>>`
              found signature `fn(&'life0 AuthRepositoryImpl, &'life1 _, &'life2 _) -> Pin<Box<(dyn std::future::Future<Output = Result<UserId, AppError>> + Send + 'async_trait)>>`
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)
help: change the output type to match the trait
   |
26 | Pin<Box<(dyn std::future::Future<Output = Result<Option<UserId>, AppError>> + Send + 'async_trait)>>
   |

